# lenia-music

./: Cargo.toml
src/: game.rs  main.rs  render.rs  ui.rs  utils.rs
