[package]
name = "lenia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.37.0", features = ["ttf", "gfx"] }
rand = "0.8.5"
colorgrad = "0.7.0"
fft2d = "0.1.0"
num-complex = "0.4.2"
rayon = "1.5"

[profile.release]
opt-level = 3 # Highest optimization level, recommended for performance
lto = "thin"  # Link Time Optimization, reduces size and improves runtime performance
codegen-units = 1 # Optimize more by reducing the number of parallel codegen units
debug = false
