[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5"
imgui = "0.12.0"
imgui-sdl2 = "0.15.2"
glow = "0.11"

[dependencies.sdl2]
version = "0.36"
features = ["image", "ttf", "gfx"]

[build-dependencies]
gl = "0.14"

[features]
default = []

